samples/_failures_safe/1761416141_1ce00d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_531a0d68.c: In function ‘main’:
./samples/SAFE/__tmp_531a0d68.c:116:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  116 |         unsigned int byte
      |         ^~~~~~~~
./samples/SAFE/__tmp_531a0d68.c:116:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_531a0d68.c:116:9: error: expected declaration or statement at end of input
